objects/MDPERSONATOR__MD_globalEmailResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__DateChecked__c</fullName>
        <label>DateChecked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeliverabilityConfidenceScore__c</fullName>
        <label>DeliverabilityConfidenceScore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainAddress1__c</fullName>
        <label>DomainAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainAdministrativeArea__c</fullName>
        <label>DomainAdministrativeArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainAgeEstimated__c</fullName>
        <label>DomainAgeEstimated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainAvailability__c</fullName>
        <label>DomainAvailability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainCountryCode__c</fullName>
        <label>DomainCountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainCountry__c</fullName>
        <label>DomainCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainCreatedDate__c</fullName>
        <label>DomainCreatedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainEmail__c</fullName>
        <label>DomainEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainExpirationDate__c</fullName>
        <label>DomainExpirationDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainLocality__c</fullName>
        <label>DomainLocality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainName__c</fullName>
        <label>DomainName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainOrganization__c</fullName>
        <label>DomainOrganization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainPostalCode__c</fullName>
        <label>DomainPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainPrivateProxy__c</fullName>
        <label>DomainPrivateProxy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainUpdatedDate__c</fullName>
        <label>DomainUpdatedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmailAgeEstimated__c</fullName>
        <label>EmailAgeEstimated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MXServer__c</fullName>
        <label>MXServer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MailboxName__c</fullName>
        <label>MailboxName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PrivacyFlag__c</fullName>
        <label>PrivacyFlag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopLevelDomainName__c</fullName>
        <label>TopLevelDomainName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopLevelDomain__c</fullName>
        <label>TopLevelDomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Global Email Result</label>
    <nameField>
        <label>Clean Suite Global Email  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Global Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>